--- a/css/style.css
+++ b/css/style.css
@@ -640,6 +640,50 @@ header label {
   margin: 0;
   padding-top: 0;
 }
+.gallery-container {
+  padding: 20px;
+}
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+.gallery-item {
+  flex: 1 1 calc(33.333% - 10px);
+  box-sizing: border-box;
+  min-width: 100px; /* Ensure a minimum width for each item */
+}
+.gallery-item img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+.gallery-image {
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+.gallery-image.full-screen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  object-fit: contain;
+  background-color: rgba(0,0,0,0.9);
+  z-index: 1000;
+}
+@media (max-width: 768px) {
+  .gallery-item {
+    flex: 1 1 calc(33.333% - 10px);
+    min-width: 100px;
+  }
+}
+@media (max-width: 480px) {
+  .gallery-item {
+    flex: 1 1 calc(33.333% - 10px);
+    min-width: 100px;
+  }
+}
 .post-wrap p {
   font-size: 1em;
   margin: 1em 0 1em 0;
