--- a/css/style.css
+++ b/css/style.css
@@ -672,6 +672,13 @@ header label {
   background-color: rgba(0,0,0,0.9);
   z-index: 1000;
 }
+.lazy {
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+.lazy-loaded {
+  opacity: 1;
+}
 @media (max-width: 768px) {
   .gallery-item {
     flex: 1 1 calc(33.333% - 10px);
